# polar-codes

./: CMakeLists.txt  ChannelAWGN.cpp  ChannelAWGN.h  PolarCode.cpp  PolarCode.h  README.md  main.cpp  random.cpp  random.h  stack.cpp  stack.h  support.h
